--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "next": "14.2.2",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/jsonwebtoken": "^9.0.5",
+    "axios": "^1.6.2",
+    "react-toastify": "^10.0.4",
+    "react-tooltip": "^5.25.1",
+    "reactjs-popup": "^2.0.6",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "typescript": "^5",
